
  - Added some simple tests to verify scrape() works as intended.

If appropriate, scrape() will now automatically include 'date' column 

    CHANGES IN pitchRx VERSION 1.3

  - Added support for scraping 2014 data.

    CHANGES IN pitchRx VERSION 1.2

MAJOR FIXES

  - In the switch to version 1.0, the count column started to be computed incorrectly. This is now fixed.

    CHANGES IN pitchRx VERSION 1.1

MAJOR FIXES

  - Not all records in the atbat table were being returned due to an improper use of merge. This is now fixed.
  - Records are sometimes duplicated when extracting from source. Duplicated records will now be removed.
  - Some variables weren't being copied to the database correctly (when using the connect argument). For example, the "gameday_link" field in the "game" table was accidently being copied as "venue".
  
MINOR IMPROVEMENTS

  - A 'gameday_link' was added to all tables for better linking between tables (you can now use this instead of url for a game identifier).

NEW FEATURE

  - The export function allows for robust appending of data.frames to remote tables.

    CHANGES IN pitchRx VERSION 1.0

MAJOR CHANGES

  - scrapeFX() is now deprecated. Please use the scrape() function instead. The function is built upon the R package XML2R. This change will lead to many improvements:

MAJOR IMPROVEMENTS

    (1) Easily write tables to a remote database using scrape()'s connect argument. This will lead to both better memory management and faster run-time.
    (2) Query particular game(s) of interest using the game.ids option.
    (3) Much, much easier to maintain and add support for new file types. scrape() currently supports four types of files: inning/inning_all.xml, inning/inning_hit.xml, miniscoreboard.xml, and players.xml. 
    (4) pitchRx will serve as a nice example of using the XML2R framework to build web scrapers. Another example is the bbscrapeR package -- https://github.com/cpsievert/bbscrapeR