@@ -8,6 +8,7 @@ export(makeUrls)
 export(scrape)
 export(scrapeFX)
 export(strikeFX)
+export(update_db)
 export(urlsToDataFrame)
 import(XML2R)
 import(ggplot2)
